Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 <p>Angular2 Modal / Dialogue using bootstrap</p>
 
+<p>Based on Angular2 Quickstart
+<a href="https://angular.io/docs/ts/latest/quickstart.html">https://angular.io/docs/ts/latest/quickstart.html</a></p>
+
 <h2>
 <a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prerequisites</h2>
 
@@ -33,8 +36,8 @@
 <a id="dependent-npm-modules" class="anchor" href="#dependent-npm-modules" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependent npm modules</h2>
 
 <ol>
-<li>angular2  &gt;= 2.0.0-alpha.44</li>
-<li>systemjs &gt;= 0.19.2</li>
+<li>angular2 2.0.0-alpha.53</li>
+<li>systemjs 0.19.6</li>
 <li>bootstrap</li>
 <li>jquery</li>
 </ol>
@@ -46,7 +49,7 @@
 
 <pre><code>npm install
 
-npm start
+npm run lite
 </code></pre>
 
 <h2>
