Upgrading to angular2 2.0.0-beta.0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Angular 2 Modal / Dialogue</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -11,7 +13,8 @@
       System.config({
         packages: {'app': {defaultExtension: 'js'}}
       });
-      System.import('app/app');
+      System.import('app/app')
+        .then(null, console.error.bind(console));
     </script>
   </head>
   <body>
